Revert PR #28: Remove readiness checks and queuing that prevented pod failure detection
This reverts the changes from commit ee9169e2423226bf989b40651a03a2438d2c027e
which introduced system readiness checks that were blocking pod failure processing.

The readiness checks were preventing the operator from detecting new pod failures
because the system was not becoming ready due to strict dependency requirements.